# Scrapper-Enricher

./: .env.example  .gitignore  CHANGELOG.md  README.md  School_Data_Enrichment_Documentation_Updated.docx  architecture_diagram.md  architecture_diagram_pdf.html  architecture_text.md  batch_schools_20250423_113438.json  batch_schools_20250423_113510.json  batch_schools_20250423_113707.json  batch_schools_20250423_113749.json  batch_schools_20250424_102235.json  batch_schools_20250424_103946.json  batch_schools_20250424_104022.json  batch_schools_20250424_104200.json  batch_schools_20250425_103058.json  batch_schools_20250425_103201.json  batch_schools_20250425_133246.json  batch_schools_20250425_145212.json  batch_schools_20250425_154015.json  batch_schools_20250426_001246.json  batch_schools_20250426_002012.json  changelog_updated.md  continuous_processing.py  direct_process.py  formatted_results_20250409_113541.json  mcp_direct_test.js  mcp_test.html  monitor_progress.py  package-lock.json  package.json  process_schools.py  process_supabase_schools.py  processed_schools.db  pyproject.toml  real_mcp_test.js  real_mcp_test_no_warnings.js  real_results_20250422_000419.json  real_school_20250422_115740.json  (+30 more)
.cursor/: mcp.json
Architecture/: simple_diagram.html  view_diagram.html
docs/: architecture_diagram.txt  architecture_explanation.md  changelog_update.md  comprehensive_guide.md  quick_start_guide.md  school_architecture_diagram.md  school_data_enrichment_architecture.md  school_data_enrichment_workflow.md  supabase_mcp_integration.md  supabase_mcp_prompts.md
(+93 files in other folders)
